[tool.poetry]
name = "xcoll"
version = "0.5.9rc0"
description = "Xsuite collimation package"
homepage = "https://github.com/xsuite/xcoll"
repository = "https://github.com/xsuite/xcoll"
authors = [
           "Frederik F. Van der Veken <frederik@cern.ch>",
           "Simone O. Solstrand <simone.otelie.solstrand@cern.ch>",
           "Björn Lindstrom <bjorn.lindstrom@cern.ch>",
           "Giacomo Broggi <giacomo.broggi@cern.ch>",
           "André Donadon Servelle <andre.donadon.servelle@cern.ch>",
           "Dora E. Veres <dora.erzsebet.veres@cern.ch>",
           "Despina Demetriadou <despina.demetriadou@cern.ch>",
           "Andrey Abramov <andrey.abramov@cern.ch>",
           "Giovanni Iadarola <giovanni.iadarola@cern.ch>"
]
readme = "README.md"
license = "Apache 2.0"
include = ["LICENSE", "NOTICE"]


[tool.poetry.dependencies]
python = ">=3.8"
ruamel-yaml = { version = "^0.17.31", optional = true }
numpy = ">=1.0"
pandas = ">=1.4"
xobjects = ">=0.2.6"
xdeps = ">=0.1.1"
xpart = ">=0.15.0"
xtrack = ">=0.36.5"

[tool.poetry.dev-dependencies]
pytest = ">=7.3"
xaux

[tool.poetry.extras]
tests = ["pytest", "ruamel-yaml"]

[build-system]
# Needed for pip install -e (BTW: need pip version 22)
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
addopts = "-ra --durations=10 --durations-min=1"
python_functions = ["test_"]
testpaths = [
    "tests",
]

